# iidx-dp-unofficial-difficulty-scraper

./: .gitignore  README.md  data.db  export_csv.py  export_csv.sh  pyproject.toml  scrapy.cfg
data/: data.db  ereternet_difficulty.csv  ereternet_difficulty_diffonly.csv  unofficial_difficulty.csv
difficulty_scraper/: items.py  middlewares.py  pipelines.py  settings.py
difficulty_scraper/spiders/: ereternet.py  ereternet_spider.py  unofficial_diff.py
