[tool.poetry]
name = "iidx-dp-unofficial-difficulty-scraper"
version = "0.1.0"
description = ""
authors = ["Ryo Watanabe <watanabe.ryo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
